vlib/v/checker/tests/wrong_arg_count_with_or_block_no_panic.vv
// Test that wrong argument count with or block containing if-else
// does not cause compiler panic (issue #26647)
fn foo() ! {
}

fn main() {
	// Test case: function with no params, called with extra args and or block with if-else
	foo(1, 2, 3) or {
		if true {
			println('error')
		} else {
			println('other')
		}
	}
}
